# design

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  deny.toml
.github/workflows/: ci.yml
decisions/: 0001-scope-governs-chart-ink.md  0002-repo-publishes-tokens-and-crate.md  0003-framework-neutral-tokens-watch-xilem.md  0004-identity-quiet-chrome-warm-light.md  0005-typography-geist-dense-gated.md  0006-viz-palette-native-mosaic-portable.md  0007-semantic-colours-radix-generator.md  0008-pipeline-rust-crate-oklch-emitted-css.md  0009-icons-tabler-everywhere.md  0010-speed-budgets-as-policy.md  0011-desktop-component-code-and-the-licence-firewall.md  _template.md
guidelines/: README.md  colour.md  density.md  icons.md  identity.md  speed.md  typography.md
meridian-design/: Cargo.toml
meridian-design/examples/: dump_css.rs  dump_theme.rs
meridian-design/src/: a11y.rs  chrome.rs  colour.rs  control.rs  elevation.rs  focus.rs  fonts.rs  input_widgets.rs  lib.rs  motion.rs  radius.rs  scales.rs  semantic.rs  spacing.rs  typography.rs  validate.rs  viz.rs
meridian-design/src/emit/: mod.rs  theme.rs
meridian-design/tests/: chrome_gate.rs  conformance.rs  palette_gate.rs
meridian-design/tests/snapshots/: theme-dark.json  theme-light.json  tokens.css
meridian-egui/: Cargo.toml
meridian-egui/examples/: gallery.rs
meridian-egui/src/: align.rs  ext.rs  key_chip.rs  lib.rs  list_row.rs  mode.rs  notify.rs  overlay.rs  picker.rs  query.rs  theme.rs  tokens.rs  widgets.rs
meridian-egui/src/icons/: data.rs  gen.rs  mod.rs  tabler.manifest
meridian-egui/tests/: harness.rs  icon_drift.rs  overlay_picker.rs  primitives.rs
scripts/: check-public-hygiene-selftest.sh  check-public-hygiene.sh  public-hygiene-allowlist.txt  public-hygiene-innocent-strings.txt
validation/: README.md  design.mts  gallery-2026-07-16.html  gen-rust.mts  package.json  ramps.mts  record-2026-07-16.txt  scales.mts
