[package]
name = "meridian-egui"
version = "0.1.0"
edition = "2021"
# The design repo pins 1.95.0 (rust-toolchain.toml); egui 0.35 declares
# rust-version 1.92, so the pin clears the adapter's floor with headroom. Stated
# here so a consumer resolving this crate on its own sees the same floor.
rust-version = "1.95"
license = "MIT"
description = "The egui emitter of the Meridian Design System — Meridian tokens as an egui Style/Visuals/FontDefinitions"
repository = "https://github.com/meridian-online/design"

# The whole crate: the token source, and egui. Deliberately ABSENT from the
# normal graph — and load-bearing in its absence — are eframe, wgpu and any
# windowing backend. This adapter derives a `Style`/`Visuals` and installs
# fonts; it neither opens a window nor owns a render surface, so a consumer
# linking it takes on egui and nothing heavier.
[dependencies]
meridian-design = { path = "../meridian-design" }
egui = "0.35"
# The icon constants are kurbo paths (ADR 0009's SVG→path ingest): the offline
# generator parses the vendored Tabler path data through kurbo, and at runtime
# kurbo's affine + flattening rasterise a glyph onto an egui painter. Pinned to
# the same major the Vello canvas consumer uses, so an `Icon`'s elements can
# cross into a kurbo/Vello scene without conversion.
kurbo = "0.13"

# Dev-only, so none of this reaches a consumer's dependency (or licence) graph:
# `egui_kittest` renders a themed frame headlessly to assert the adapter drew
# what the tokens say; `eframe` runs the gallery example a human looks at. The
# `wgpu`/`snapshot` features match the brightfield consumer's kittest setup so a
# pixel baseline authored here and one authored there mean the same thing.
#
# `default-features = false` drops eframe's `glow` (we render through wgpu only),
# but the same switch also drops its default `x11`/`wayland` — the Linux window
# backends. macOS builds either way (its backend is unconditional), so the
# omission is invisible locally and only surfaces as winit's "platform not
# supported" compile error on Linux CI. Re-enable both so the gallery example
# compiles cross-platform under `--all-targets`.
[dev-dependencies]
egui_kittest = { version = "0.35", features = ["wgpu", "snapshot"] }
eframe = { version = "0.35", default-features = false, features = ["wgpu", "x11", "wayland"] }
